src-tauri/check_error_3.log
    Checking ttrpg-assistant v1.0.0 (/home/svnbjrn/dev/AI-RPG/remaining-features/src-tauri)
warning: unused imports: `ChatChunk` and `ChatResponse`
  --> src/core/llm/proxy.rs:16:21
   |
16 | use super::router::{ChatChunk, ChatMessage, ChatRequest, ChatResponse, LLMError, LLMProvider, MessageRole};
   |                     ^^^^^^^^^                            ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `futures_util::stream::Stream`
  --> src/core/llm/proxy.rs:24:5
   |
24 | use futures_util::stream::Stream;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `TokenUsage`
 --> src/core/llm/providers/meilisearch.rs:5:47
  |
5 | use crate::core::llm::cost::{ProviderPricing, TokenUsage};
  |                                               ^^^^^^^^^^

warning: unused import: `DEFAULT_CDP_PORT`
  --> src/core/claude_cdp/manager.rs:14:56
   |
14 | use super::config::{ClaudeConfig, CLAUDE_BINARY_PATHS, DEFAULT_CDP_PORT};
   |                                                        ^^^^^^^^^^^^^^^^

warning: unused variable: `was_pending`
   --> src/core/voice/queue.rs:697:14
    |
697 |         let (was_pending, was_processing, progress) = {
    |              ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_was_pending`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0063]: missing field `provider` in initializer of `ChatRequest`
   --> src/core/llm/proxy.rs:381:24
    |
381 |     let chat_request = ChatRequest {
    |                        ^^^^^^^^^^^ missing `provider`

warning: unused variable: `query_embedding`
   --> src/core/search/hybrid.rs:478:13
    |
478 |         let query_embedding = provider
    |             ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_query_embedding`

warning: unused variable: `filter`
   --> src/core/search/hybrid.rs:564:9
    |
564 |         filter: Option<&str>,
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_filter`

error[E0004]: non-exhaustive patterns: `&ProviderConfig::Meilisearch { .. }` not covered
   --> src/commands.rs:318:29
    |
318 |         let api_key = match &config {
    |                             ^^^^^^^ pattern `&ProviderConfig::Meilisearch { .. }` not covered
    |
note: `ProviderConfig` defined here
   --> src/core/llm/providers/mod.rs:41:10
    |
 41 | pub enum ProviderConfig {
    |          ^^^^^^^^^^^^^^
...
102 |     Meilisearch {
    |     ----------- not covered
    = note: the matched value is of type `&ProviderConfig`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
328 ~             LLMConfig::Ollama { .. } | LLMConfig::ClaudeDesktop { .. } | LLMConfig::ClaudeCode { .. } | LLMConfig::GeminiCli { .. } => String::new(),
329 ~             &ProviderConfig::Meilisearch { .. } => todo!(),
    |

error[E0004]: non-exhaustive patterns: `&ProviderConfig::Meilisearch { .. }` not covered
   --> src/commands.rs:331:27
    |
331 |         let model = match &config {
    |                           ^^^^^^^ pattern `&ProviderConfig::Meilisearch { .. }` not covered
    |
note: `ProviderConfig` defined here
   --> src/core/llm/providers/mod.rs:41:10
    |
 41 | pub enum ProviderConfig {
    |          ^^^^^^^^^^^^^^
...
102 |     Meilisearch {
    |     ----------- not covered
    = note: the matched value is of type `&ProviderConfig`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
344 ~             LLMConfig::GeminiCli { model, .. } => model.clone(),
345 ~             &ProviderConfig::Meilisearch { .. } => todo!(),
    |

warning: unused variable: `temperature`
   --> src/commands.rs:727:5
    |
727 |     temperature: Option<f32>,
    |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_temperature`

warning: unused variable: `max_tokens`
   --> src/commands.rs:728:5
    |
728 |     max_tokens: Option<u32>,
    |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_max_tokens`

warning: unused variable: `config`
   --> src/commands.rs:734:9
    |
734 |     let config = state.llm_config.read().unwrap()
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`

warning: unused variable: `host`
    --> src/commands.rs:5831:13
     |
5831 |         let host = state.search_client.host();
     |             ^^^^ help: if this is intentional, prefix it with an underscore: `_host`

warning: unused import: `futures_util::StreamExt`
  --> src/core/llm/router.rs:14:5
   |
14 | use futures_util::StreamExt;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `role`
  --> src/core/llm/proxy.rs:59:13
   |
59 |         let role = match msg.role.as_str() {
   |             ^^^^ help: if this is intentional, prefix it with an underscore: `_role`

warning: unused variable: `patterns`
   --> src/core/personality/application.rs:769:9
    |
769 |         patterns: &SpeechPatterns,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_patterns`

warning: unused variable: `content_type`
   --> src/core/personality/application.rs:791:9
    |
791 |         content_type: &ContentType,
    |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_content_type`

warning: unused variable: `options`
   --> src/core/character_gen/mod.rs:318:32
    |
318 |     fn validate_options(&self, options: &GenerationOptions) -> Result<()> {
    |                                ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_options`

warning: unreachable pattern
   --> src/core/location_gen.rs:139:13
    |
123 |             "prison" | "jail" | "dungeon" => Self::Prison,
    |             ----------------------------- matches all the relevant values
...
139 |             "dungeon" => Self::Dungeon,
    |             ^^^^^^^^^ no value can reach this
    |
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `rng`
   --> src/core/location_gen.rs:549:85
    |
549 |     fn generate_description(&self, loc_type: &LocationType, theme: &Option<String>, rng: &mut impl rand::Rng) -> String {
    |                                                                                     ^^^ help: if this is intentional, prefix it with an underscore: `_rng`

warning: unused variable: `rng`
   --> src/core/location_gen.rs:571:60
    |
571 |     fn generate_atmosphere(&self, loc_type: &LocationType, rng: &mut impl rand::Rng) -> Atmosphere {
    |                                                            ^^^ help: if this is intentional, prefix it with an underscore: `_rng`

warning: unused variable: `words`
   --> src/core/query_expansion.rs:195:13
    |
195 |         let words: Vec<&str> = query.split_whitespace().collect();
    |             ^^^^^ help: if this is intentional, prefix it with an underscore: `_words`

warning: unused variable: `n`
   --> src/core/session/conditions.rs:353:38
    |
353 |             ConditionDuration::Turns(n) if is_own_turn => {
    |                                      ^ help: if this is intentional, prefix it with an underscore: `_n`

warning: unused variable: `connection_type`
    --> src/commands.rs:5392:5
     |
5392 |     connection_type: String,
     |     ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_connection_type`

warning: unused variable: `description`
    --> src/commands.rs:5393:5
     |
5393 |     description: Option<String>,
     |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_description`

Some errors have detailed explanations: E0004, E0063.
For more information about an error, try `rustc --explain E0004`.
warning: `ttrpg-assistant` (lib) generated 23 warnings
error: could not compile `ttrpg-assistant` (lib) due to 3 previous errors; 23 warnings emitted
